--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,12 @@
     "disableSources": true,
     "entryDocument": "index.md",
     "entryPoints": [
-      "./packages/selderee/src/selderee.ts"
+      "./packages/selderee/src/selderee.ts",
+      "./packages/plugin-htmlparser2/src/hp2-builder.ts"
     ],
     "excludePrivate": true,
     "hideBreadcrumbs": false,
-    "includeVersion": true,
+    "includeVersion": false,
     "name": "API documentation",
     "readme": "none",
     "out": "docs"
