--- a/package.json
+++ b/package.json
@@ -29,22 +29,22 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
     "@tsconfig/node10": "^1.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "ava": "^3.15.0",
     "concurrently": "^6.2.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.28.0",
-    "eslint-plugin-jsonc": "^1.2.1",
+    "eslint": "^7.29.0",
+    "eslint-plugin-jsonc": "^1.3.1",
     "eslint-plugin-tsdoc": "^0.2.14",
     "htmlparser2": "^6.1.0",
     "markdownlint-cli2": "^0.1.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.51.1",
+    "rollup": "^2.52.7",
     "ts-node": "^9.1.1",
-    "tslib": "^2.2.0",
-    "typedoc": "^0.20.36",
-    "typedoc-plugin-markdown": "^3.9.0",
+    "tslib": "^2.3.0",
+    "typedoc": "~0.20.37",
+    "typedoc-plugin-markdown": "~3.9.0",
     "typescript": "~4.2.4"
   },
   "ava": {
