--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
     "test": "ava"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@tsconfig/node10": "^1.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@tsconfig/node12": "^1.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "ava": "^3.15.0",
-    "concurrently": "^6.2.1",
+    "concurrently": "^6.3.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jsonc": "^1.3.1",
+    "eslint": "^8.2.0",
+    "eslint-plugin-jsonc": "^2.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
-    "htmlparser2": "^6.1.0",
-    "markdownlint-cli2": "^0.1.3",
+    "htmlparser2": "^7.1.2",
+    "markdownlint-cli2": "^0.3.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.57.0",
+    "rollup": "^2.59.0",
     "ts-node": "^9.1.1",
     "tslib": "^2.3.1",
-    "typedoc": "~0.20.37",
-    "typedoc-plugin-markdown": "~3.9.0",
-    "typescript": "~4.2.4"
+    "typedoc": "^0.22.8",
+    "typedoc-plugin-markdown": "^3.11.3",
+    "typescript": "^4.4.4"
   },
   "ava": {
     "extensions": [
