--- a/packages/selderee/package.json
+++ b/packages/selderee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "selderee",
-  "version": "0.7.0",
+  "version": "0.8.1",
   "description": "Selectors decision tree - choose matching selectors, fast",
   "keywords": [
     "CSS",
@@ -30,6 +30,7 @@
   "files": [
     "lib"
   ],
+  "sideEffects": false,
   "scripts": {
     "build:rollup": "rollup -c",
     "build:types": "tsc -d --emitDeclarationOnly --declarationDir ./lib",
@@ -37,6 +38,6 @@
     "clean": "rimraf lib"
   },
   "dependencies": {
-    "parseley": "^0.8.0"
+    "parseley": "^0.9.1"
   }
 }
