--- a/package.json
+++ b/package.json
@@ -8,59 +8,56 @@
   "author": "KillyMXI",
   "funding": "https://ko-fi.com/killymxi",
   "license": "MIT",
-  "files": [],
+  "workspaces": [
+    "packages/plugin-htmlparser2",
+    "packages/selderee"
+  ],
   "scripts": {
     "build:docs": "typedoc",
-    "build:plugin-htmlparser2": "cd ./packages/plugin-htmlparser2/ && npm run build",
-    "build:selderee": "cd ./packages/selderee/ && npm run build",
-    "build": "npm run copy:readme && concurrently npm:build:*",
+    "build:plugin-htmlparser2": "npm run build -w ./packages/plugin-htmlparser2",
+    "build:selderee": "npm run build -w ./packages/selderee",
+    "build": "npm run copy:readme && npm run build --workspaces && npm run build:docs",
     "checkAll": "npm run lint && npm test",
     "copy:readme": "copyfiles README.md packages/selderee/",
     "example": "node ./example/example.cjs",
-    "install:plugin-htmlparser2": "cd ./packages/plugin-htmlparser2/ && npm i",
-    "install:selderee": "cd ./packages/selderee/ && npm i",
     "lint:eslint": "eslint .",
     "lint:md": "markdownlint-cli2",
-    "lint": "concurrently npm:lint:*",
-    "postinstall": "concurrently npm:install:*",
+    "lint": "npm run lint:eslint && npm run lint:md",
     "prepublishOnly": "npm run checkAll",
     "test": "ava --timeout=20s"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
     "@tsconfig/node12": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "ava": "^3.15.0",
-    "concurrently": "^6.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "ava": "^4.0.1",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-jsonc": "^2.0.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-jsonc": "^2.1.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "htmlparser2": "^7.2.0",
-    "markdownlint-cli2": "^0.3.2",
+    "markdownlint-cli2": "^0.4.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.62.0",
+    "rollup": "^2.67.0",
     "rollup-plugin-cleanup": "^3.2.1",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
-    "typedoc": "^0.22.10",
-    "typedoc-plugin-markdown": "^3.11.8",
-    "typescript": "^4.5.4"
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-markdown": "^3.11.12",
+    "typescript": "^4.5.5"
   },
   "ava": {
-    "extensions": [
-      "ts"
-    ],
+    "extensions": {
+      "ts": "module"
+    },
     "files": [
       "packages/*/test/**/*"
     ],
-    "require": [
-      "ts-node/register"
+    "nodeArguments": [
+      "--loader=ts-node/esm",
+      "--experimental-specifier-resolution=node"
     ],
-    "environmentVariables": {
-      "TS_NODE_FILES": "true"
-    },
     "verbose": true
   }
 }
