--- a/packages/selderee/package.json
+++ b/packages/selderee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "selderee",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "Selectors decision tree - choose matching selectors, fast",
   "keywords": [
     "CSS",
@@ -27,6 +27,7 @@
   "main": "./lib/selderee.cjs",
   "module": "./lib/selderee.mjs",
   "types": "./lib/selderee.d.ts",
+  "typedocMain": "./src/selderee.ts",
   "files": [
     "lib"
   ],
@@ -38,6 +39,6 @@
     "clean": "rimraf lib"
   },
   "dependencies": {
-    "parseley": "^0.9.1"
+    "parseley": "^0.10.0"
   }
 }
