--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,9 +16,6 @@ jobs:
         with:
           node-version: 12.x
 
-      - name: Setup NPM v7
-        run: npm i -g npm@7
-
       - name: Get npm cache directory
         id: npm-cache-dir
         run: |
@@ -31,6 +28,12 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
+
+      - name: Setup NPM v7
+        run: |
+          npm install -g npm@7 &&
+          npm --version &&
+          npm list -g --depth 0
 
       - run: npm ci
 
