--- a/package.json
+++ b/package.json
@@ -29,25 +29,25 @@
     "test": "ava --timeout=20s"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^10.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@tsconfig/node14": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "ava": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "ava": "^5.2.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.28.0",
-    "eslint-plugin-jsonc": "^2.5.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-jsonc": "^2.6.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "htmlparser2": "^8.0.1",
-    "markdownlint-cli2": "~0.5.1",
-    "rimraf": "^3.0.2",
+    "markdownlint-cli2": "~0.6.0",
+    "rimraf": "^4.1.2",
     "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typedoc": "~0.22.18",
-    "typedoc-plugin-markdown": "~3.12.1",
-    "typescript": "~4.7.4"
+    "tslib": "^2.5.0",
+    "typedoc": "0.22.18",
+    "typedoc-plugin-markdown": "3.12.1",
+    "typescript": "4.7.4"
   },
   "ava": {
     "extensions": {
